--- a/package.json
+++ b/package.json
@@ -10,15 +10,9 @@
 	"author": "abass adeyemi",
 	"license": "ISC",
 	"dependencies": {
-		"axios": "^0.27.2",
 		"body-parser": "^1.20.0",
-		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
-		"express-routemap": "^1.6.0",
-		"joi": "^17.6.0",
-		"mysql2": "^2.3.3",
-		"nanoid": "^4.0.0",
-		"uuidv4": "^6.2.13"
+		"express-routemap": "^1.6.0"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.19"
